Fix footer not showing

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -58,7 +58,7 @@ header a .tag {
 
 
 .main {
-    height: 100%;
+    height: 75vh;
 
     display: flex;
     flex-direction: row;
